terraform/ec2.tf
resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = file("~/.ssh/ec2-key.pub")
}

resource "aws_security_group" "allow_ssh_http" {
  name        = "allow_ssh_http"
  description = "Allow SSH and HTTP"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "filehub_api_ec2" {
  ami                    = "ami-034568121cfdea9c3" # Ubuntu 24.04 LTS
  instance_type          = var.instance_type
  key_name               = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.allow_ssh_http.id]

  user_data = <<-EOF
    #!/bin/bash
    apt update -y
    apt install docker.io -y

    usermod -aG docker ubuntu

    systemctl enable docker.service
    systemctl start docker.service

    docker pull benfreitas/filehub:1.0

    docker run -p80:8080 --restart always -d benfreitas/filehub:1.0
  EOF
}

output "backend_ip" {
  value = aws_instance.filehub_api_ec2.public_dns
}
